# SARSSA

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  README.md  docker-compose.gpu.yml  docker-compose.yml  justfile  pyproject.toml  requirements.txt
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/api/: client.ts  errors.ts  items.ts  pipelines.ts  plugins.ts  types.ts
frontend/src/components/: ArtifactPanel.tsx  ExperimentMenu.tsx  Header.tsx  InfoTooltip.tsx  ItemCard.tsx  LaunchModal.tsx  Layout.tsx  PipelineCard.tsx  RunningTasksMenu.tsx  TaskActivity.tsx  VisualResultsPanel.tsx
frontend/src/pages/: GuidePage.tsx  ResultsPage.tsx
frontend/src/store/: pipelineStore.ts  runPersistence.ts
frontend/src/types/: items.ts  pipeline.ts  plugin.ts
frontend/src/utils/: duration.ts  paramValidation.ts  useNow.ts
scripts/: download_lastFm1k_all.sh  download_lastFm1k_dataset.sh  download_movieLens_all.sh  download_movieLens_dataset.sh  download_steam-games_all.sh  fetch_movie_metadata.py  tmdb.py
scripts/sarssa_cli/: README.md  pipeline.example.yaml  sarssa_cli.py
src/: README.md
src/app/: README.md  main.py
src/app/api/: routes_items.py  routes_pipelines.py  routes_plugins.py
src/app/config/: config.py  config.yaml
src/app/core/: param_choices.py  pipeline_engine.py  pipeline_runs.py  pipeline_worker.py  plugin_categories.py  plugin_manager.py  plugin_registry.py  run_recovery.py  task_store.py
src/app/models/: pipeline.py  plugin.py
src/app/utils/: logger.py
src/plugins/: README.md  compare_plugin_interface.py  plugin_interface.py
src/plugins/dataset_loading/: README.md  _dataset_loader.py  artifact_loader.py
src/plugins/evaluation/: dummy_evaluator.py
src/plugins/inspection/: _top_k.py
src/plugins/labeling_evaluation/: _embedding_cache.py  _embedding_map.py  _keyword_search.py  _keyword_search_html.py  _nearest_label_distance.py  dendrogram.py
src/plugins/neuron_labeling/: README.md  _confidence.py  tf_idf.py  tf_idf_utils.py
src/plugins/steering/: _steer.py
src/plugins/training/: dummy_trainer.py  mock_trainer.py
src/plugins/training_1/: elsa_trainer.py  sae_trainer.py
src/utils/: README.md  cancellation.py  mlflow_manager.py  plugin_logger.py  plugin_notifier.py
(+139 files in other folders)
