[project]
name = "python-project-template"
description = "python project template"
version = "1.0"
dependencies = [
    "pip-tools",
    "python-dotenv",
    "pydantic",
    "ipykernel",
    "fastapi",
    "uvicorn",
    "torch==2.7.1",
    "mlflow",
    "numpy",
    "tqdm",
    "scipy",
    "polars==1.31.0",
]