[project]
name = "sarssa"
description = "Service Application for Recommender Systems with Sparse Autoencoders"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pydantic",
    "ipykernel",
    "fastapi",
    "uvicorn",
    "torch==2.7.1",
    "mlflow",
    "numpy",
    "tqdm",
    "scipy",
    "polars==1.31.0",
    "langchain-openai",
    "langchain-core",
    "matplotlib",
    "plotly",
    "kaleido",
    "umap-learn"
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.15",
    "pre-commit>=3.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "sse-starlette>=3.3.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]

[[tool.ty.overrides]]
include = [
    "src/utils/embedder/openai_embedder.py",
    "src/utils/embedder/registry.py",
    "src/utils/llm/openai_llm.py",
    "src/utils/llm/registry.py",
    "src/plugins/**/*.py",
    "src/tests/plugins/**/*.py"
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unknown-argument = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"
invalid-return-type = "ignore"
